src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Estimation__c</fullName>
        <label>Estimation</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScrumSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scrum Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskNumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>